libmongoc 1.24.0 (Unreleased)
=============================

  * Support for macOS 10.14 will be dropped in an upcoming release.


libmongoc 1.23.4
================

Fixes:

  * Fix possible failure to authenticate with MONGODB-X509 after network error.

Thanks to everyone who contributed to the development of this release.

  * Andreas Braun
  * Kevin Albertson
  * Kyle Kloberdanz


libmongoc 1.23.3
================

Fixes:

  * Better handle malformed `hello` responses
  * Handle `connectionId` of type `double`.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Gil Alon
  * Kondaiah Valagonda



libmongoc 1.23.2
================

Bug fixes:

  * Fix compile on M1 macOS fails due to undeclared function (getpagesize)

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Kyle Kloberdanz


libmongoc 1.22.2
================

  * Fix connectivity to Atlas Data Lake
  * Additional bugfixes from libbson 1.22.2

Thanks to everyone who contributed to the development of this release.

  * Andreas Braun
  * Kevin Albertson
  * Roberto C. Sánchez


libmongoc 1.23.1
================

Bug fixes:

  * Fix connectivity to Atlas Data Lake
  * Fix crash when dropping a malformed Queryable Encryption collection.

Thanks to everyone who contributed to the development of this release.

  * Andreas Braun
  * Kevin Albertson



libmongoc 1.23.0
================

Features:

  * Add on-demand Credentials Callback for CSFLE
  * Support obtaining AWS credentials for CSFLE in the same way as for MONGODB-AWS

Improvements:

  * Reducing Warnings of Misaligned Address of Over-Aligned Types

Bug fixes:

  * Do not spawn mongocryptd if mongo_shared shared library is loaded.

Thanks to everyone who contributed to the development of this release.

  * Ezra Chung
  * Colby Pike
  * Kevin Albertson
  * Roberto C. Sánchez



libmongoc 1.22.1
================

Bug fixes:
