@@ -45,6 +45,11 @@ configure_flags_append_if_not_null() {
 
 declare install_dir="${mongoc_dir}/install-dir"
 
+## * Note: For additional configure-time context, the following lines can be
+## * uncommented to enable CMake's debug output:
+# configure_flags_append --log-level=debug
+# configure_flags_append --log-context
+
 configure_flags_append "-DCMAKE_INSTALL_PREFIX=$(native-path "${install_dir}")"
 configure_flags_append "-DCMAKE_PREFIX_PATH=$(native-path "${install_dir}")"
 configure_flags_append "-DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF"
