@@ -2,6 +2,10 @@ libmongoc 1.24.0 (Unreleased)
 =============================
 
   * Support for macOS 10.14 will be dropped in an upcoming release.
+  * The `ENABLE_BSON` configure-time option has been removed. Build scripts that
+    used `ENABLE_BSON=SYSTEM` should be updated to use `USE_SYSTEM_LIBBSON=TRUE`.
+    If the build script needs to support building arbitrary versions of the C
+    driver, add both `ENABLE_BSON=SYSTEM` and `USE_SYSTEM_LIBBSON=TRUE`.
 
 
 libmongoc 1.23.4
